--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">StartProject</string>
+    <string name="loading_error">Loading error</string>
 </resources>
