--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">StartProject</string>
     <string name="loading_error">Loading error</string>
+    <string name="image">Image</string>
 </resources>
